--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+  mongo:
+    volumes:
+      - mongo-db:/data/db
+volumes:
+  mongo-db:
