--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/yashh-dev/node-dock#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
