--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,13 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+    depends_on:
+      - mongo
   mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=crash
+      - MONGO_INITDB_ROOT_PASSWORD=burn
     volumes:
       - mongo-db:/data/db
 volumes:
