--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=burn
     volumes:
       - mongo-db:/data/db
+  redis:
+    image: redis
 volumes:
   mongo-db:
