--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/yashh-dev/node-dock#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-redis": "^6.1.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
