--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-redis": "^6.1.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ioredis": "^5.2.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "redis": "^4.5.1"
